[tool.poetry]
name = "musicxml2fmf"
version = "0.2.0"
description = "MusicXML to Flipper Music Format"
authors = ["Natanael Arndt <arndtn@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/white-gecko/musicxml2fmf"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
lxml = "^4.9.1"
black = "^22.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
musicxml2fmf = "musicxml2fmf:convert"
