[tool.poetry]
name = "musicxml2fmf"
version = "0.3.1"
description = "MusicXML to Flipper Music Format"
authors = ["Natanael Arndt <arndtn@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/white-gecko/musicxml2fmf"
keywords = ["music", "converter", "flipper-zero", "flipper", "musicxml"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: OS Independent",
  "Topic :: Games/Entertainment",
  "Topic :: Multimedia",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Multimedia :: Sound/Audio :: Conversion",
  "Topic :: Multimedia :: Sound/Audio :: Sound Synthesis",
  "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
lxml = "^4.9.1"
black = "^22.6.0"

[tool.poetry.dev-dependencies]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/white-gecko/musicxml2fmf/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
musicxml2fmf = "musicxml2fmf:convert"
